# nur

./: .gitignore  TODO
doc/: Makefile  design.markdown  design.txt  tasklist.markdown
doc/design/: SConstruct  design.markdown
doc/gdd/: Makefile  SConstruct  gdd.markdown
doc/tasklist/: SConstruct  tasklist.markdown
lib/sdl/include/SDL/: SDL_config.h  SDL_revision.h
lib/sdl/lib/: libSDL-1.3.so.0.0.0  libSDL.la
media/audio/src/: level_t.mid  opening.mid
media/levels/: level_00.tmx  level_00_uncompressed.tmx  level_t.tmx  pmuj_ts.tsx
media/src/: man_still.xcf
media/tex/: convertToPng.sh
media/tex/backs/: t.xcf
media/tex/src/: bullet_0.xcf  death_portal.xcf  door.xcf  fike.xcf  floor.xcf  man_crouching.xcf  man_still.tga  man_still.xcf  man_ts.xcf  man_walking_0.xcf  man_walking_1.xcf  nur_ts.xcf  portal.xcf  powerup_bad.xcf  powerup_good.xcf
src/: .sconsign.dblite  Boost.hpp  CMakeLists.txt  CMakeLists.txt~  Evt.hpp  SConstruct  SConstruct~  SceneNode.hpp  ThrustEvt.hpp  View.hpp  main.c  main.scons  mmgt.h  nxEntity.c  nxEntity.h  nxGameLogic.c  nxGameLogic.h  nxGameView.c  nxGameView.h  nxHumanGameView.c  nxHumanGameView.h  nxPhysics.c  nxPhysics.h  nxSceneNode.c  nxSceneNode.h  nxTextureLoader.c  nxTextureLoader.h  scenenode.c  scenenode.h  sys_linux.c  view.c  view.h
src/nxAlgebra/: nxVector2.c  nxVector2.h
src/nxApp/: main.c
src/nxCore/: nxConstants.h  nxList.c  nxList.h  nxLog.c  nxLog.h  nxMM.c  nxMM.h  nxMath.h  nxTypes.h
src/nxEvent/: nxEvent.c  nxEvent.h  nxEventData.h  nxEventManager.c  nxEventManager.h
src/nxLogic/: nxEntity.c  nxEntity.h  nxGameLogic.c  nxGameLogic.h  nxPhysics.c  nxPhysics.h  nxProcess.c  nxProcess.h  nxProcessManager.c  nxProcessManager.h
src/nxProcess/: nxProcessManager.h
src/nxView/: nxGameView.h  nxHumanGameView.c  nxHumanGameView.h  nxSceneNode.c  nxSceneNode.h  nxTextureLoader.c  nxTextureLoader.h
src_old/: Boost.hpp  CMakeLists.txt  Evt.hpp  EvtHnd.hpp  EvtMan.hpp  Point2.hpp  SceneNode.hpp  ThrustEvt.hpp  View.hpp  main.cpp
test/: SConstruct  nxList_tests.c  nxProcessManager_tests.c  nxXmlLoader_example.c  tests.c
(+4 files in other folders)
